All_Component_DX/force-app/main/default/objects/Service_Pricebook_Entry__c/Service_Pricebook_Entry__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Represent price entry for service</description>
    <label>Service Pricebook Entry</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Pricebook Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>