All_Component_DX/force-app/main/default/objects/Service_Pricebook_Entry__c/fields/Activity_Product__c.field-meta.xml
<CustomField>
    <fullName>Activity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Product</label>
    <referenceTo>Activity_Product__c</referenceTo>
    <relationshipLabel>Service Pricebook Entry</relationshipLabel>
    <relationshipName>Service_Pricebook_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>