All_Component_DX/force-app/main/default/objects/Service_Pricebook_Entry__c/fields/Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Entry_Type__c</fullName>
    <description>Pricebook Entry Type</description>
    <inlineHelpText>Pricebook Entry Type</inlineHelpText>
    <label>Entry Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Labor</fullName>
                <default>true</default>
                <label>Labor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>