All_Component_DX/force-app/main/default/objects/Service_Pricebook_Entry__c/fields/Regular_Rate__c.field-meta.xml
<CustomField>
    <fullName>Regular_Rate__c</fullName>
    <description>Regular Rate</description>
    <label>Regular Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>