All_Component_DX/force-app/main/default/objects/Service_Pricebook_Entry__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Per Hour</fullName>
                <default>true</default>
                <label>Per Hour</label>
            </value>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>