All_Component_DX/force-app/main/default/objects/Service_Pricebook_Entry__c/listViews/All_Service_Pricebook_Entry.listView-meta.xml
<ListView>
    <fullName>All_Service_Pricebook_Entry</fullName>
    <filterScope>Everything</filterScope>
    <label>All Service Pricebook Entry</label>
    <language>en_US</language>
</ListView>